syntax = "proto3";

package com.hmproductions.multiplayertutorial.actions;
option java_multiple_files = false;

message GetScoreRequest {
    uint32 id = 1;
    string name = 2;
}

message GetScoreResponse {

    enum StatusCode {
        OK = 0;
        MARKET_CLOSED = 1;
        STOCK_CLOSED = 2;
        PASSWORD_MISMATCH = 3;
        SERVER_ERROR = 4;
    }

    StatusCode status_code = 1;
    string message = 2;
}